apps/applications/media/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.70.0@sha256:c691d8ddd5184c155d1732244519f0c09dc44559a7a0da14c6d0dc3edf7fcfb3
          ports:
            - name: web-ui
              containerPort: 7474
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/healthz/readiness
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/healthz/readiness
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/healthz/liveness
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: autobrr-config-pvc
