apps/applications/media/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr-ui
  namespace: media
spec:
  selector:
    app: autobrr
  ports:
    - name: web-ui
      port: 7474
