apps/applications/media/autobrr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autobrr-policy
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: autobrr
  # ----=== Ingress ===----
  ingress:
    # === Allow access from Traefik ===
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"

  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: "UDP"
            - port: "53"
              protocol: "TCP"
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: qbittorrent-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-ui
            namespace: media
        - k8sService:
            serviceName: radarr-ui
            namespace: media
    # === Allow access to external for IRC ===
    - toEntities:
        - "world"
